--- a/notebooks/1.extraccion_data_combustible.ipynb
+++ b/notebooks/1.extraccion_data_combustible.ipynb
@@ -626,7 +626,9 @@
    "dashboards": [],
    "environmentMetadata": null,
    "language": "python",
-   "notebookMetadata": {},
+   "notebookMetadata": {
+    "pythonIndentUnit": 4
+   },
    "notebookName": "1.extraccion_data_combustible",
    "widgets": {}
   },
